--- a/src/Trip/TripList/TripList.css
+++ b/src/Trip/TripList/TripList.css
@@ -1,18 +1,18 @@
-
 #trip-cont{
     background-color: lightgray;
-    margin-top: 10vh;
     height: 130px;
     padding-top: 10px;
     padding-left: 30px;
 }
   
 #title{
-    margin-top: 40px;
+    margin-top: 50px;
+    margin-bottom: 15px;
     padding-left: 30px;
 }
   
 #new-trip{
   margin-top: 20px;
   margin-left: 30px;
+  color: black;
 }
