--- a/src/nav/Nav.css
+++ b/src/nav/Nav.css
@@ -1,15 +1,40 @@
 nav{
-    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     background-color: rgb(170, 168, 168); 
     position: fixed;
     top: 0;
     width: 100%;
     height: 40px;
+    padding: 0 10px 0 10px;
 }
 
 .nav-link{
     padding: 3px;
     color: white;
     text-decoration: none;
+    display: block;
 }
-  
+
+#nav-hide{
+    display: none;
+}
+
+#nav-show{
+    display: initial;
+    background-color: rgb(170, 168, 168);
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    width: 120px;
+    height: 123px;
+}
+
+#nav-bars{
+    color: white;
+}
+
+#right-nav{
+    position: relative;
+    top: 80px;
+    right: -20px;
+}
