--- a/src/nav/Nav.css
+++ b/src/nav/Nav.css
@@ -25,8 +25,9 @@ nav{
     display: initial;
     background-color: rgb(170, 168, 168);
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    width: 120px;
+    width: 80px;
     height: 123px;
+    padding-left: 10px;
 }
 
 #nav-bars{
@@ -38,7 +39,3 @@ nav{
     top: 40px;
     right: 0px;
 }
-
-/* #right-nav{
-    position: relative;
-} */
