--- a/src/Trip/NewTrip/NewTrip.css
+++ b/src/Trip/NewTrip/NewTrip.css
@@ -1,8 +1,7 @@
 #main-trip{
     padding-top: 60px;
-    padding-left: 40px;
-    /* display: flex;
-    justify-content: center; */
+    display: flex;
+    justify-content: center;
 }
   
 #img{
@@ -24,4 +23,9 @@ span{
 input {
     height: 20px;
     border-style: black;
+}
+
+.new-trip-btns{
+    margin: 0 0 10px 10px;
+    padding: 3px;
 }
