--- a/src/nav/Nav.css
+++ b/src/nav/Nav.css
@@ -2,7 +2,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: rgb(170, 168, 168); 
+    /* background-color: rgb(170, 168, 168);  */
     position: fixed;
     top: 0;
     width: 100%;
@@ -12,7 +12,7 @@ nav{
 
 .nav-link{
     padding: 3px;
-    color: white;
+    color: black;
     text-decoration: none;
     display: block;
 }
@@ -23,7 +23,7 @@ nav{
 
 #nav-show{
     display: initial;
-    background-color: rgb(170, 168, 168);
+    background-color: white;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     width: 80px;
     height: 123px;
@@ -31,7 +31,7 @@ nav{
 }
 
 #nav-bars{
-    color: white;
+    color: black;
 }
 
 #nav-show{
