--- a/src/SearchPage/SearchPage.css
+++ b/src/SearchPage/SearchPage.css
@@ -29,3 +29,15 @@
 .search-check-items p{
     padding-left: 7px;
 }
+
+#results-cont{
+    box-shadow: 0px 1px 2px 2px rgba(0,0,0,0.1); 
+    margin-top: 20vh;
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 30px;
+}
+
+#results-title{
+    padding-top: 20px;
+}
