--- a/src/SearchPage/SearchPage.css
+++ b/src/SearchPage/SearchPage.css
@@ -4,26 +4,31 @@
     align-items: center;
     justify-content: center;
 }
- 
-#search-container{
-    height: 150px;
-}
   
 #search-title{
-   margin-bottom: 10px;  
+   margin-bottom: 20px;  
 }
 
-.search-check-items{
+#search{
+    margin-bottom: 10px;  
+}
+
+.searchTypes{
+    padding: 1px;
+    margin: 6px;
+}
+
+/* .search-check-items{
     display: flex;
 }
 
 .search-check-items p{
     padding-left: 7px;
-}
+} */
 
 #results-cont{
     box-shadow: 0px 1px 2px 2px rgba(0,0,0,0.1); 
-    margin-top: 20vh;
+    margin-top: 50px;
     display: flex;
     flex-wrap: wrap;
     padding-left: 30px;
