review error handling

--- a/src/Review/ReviewList/ReviewList.css
+++ b/src/Review/ReviewList/ReviewList.css
@@ -19,3 +19,10 @@
   margin-bottom: 15px;
   font-size: 10px;
 }
+
+.success{
+  color: blue; 
+  font-size: 14px;
+  width: 210px;
+  margin-bottom: 10px;
+}
