--- a/src/SearchPage/Results/ResultsPage.css
+++ b/src/SearchPage/Results/ResultsPage.css
@@ -14,3 +14,10 @@
     font-size: 10px;
     padding: 6px;
 }
+
+#empty-results-error{
+    margin-top: 60px;
+    margin-bottom: 20px;
+    font-size: 12px;
+    color: red;
+}
