--- a/src/nav/Nav.css
+++ b/src/nav/Nav.css
@@ -11,25 +11,32 @@ nav{
     box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.1);
 }
 
-.nav-link{
-    padding: 3px;
+.nav-link, a{
+    padding: 2px 10px;
     color: black;
     text-decoration: none;
     display: block;
+    background-color: white;
+    
+}
+
+.nav-auth {
+    padding: 0;
+    box-shadow: 2px 10px 18px 0px rgba(0,0,0,0.1);
 }
 
 #nav-hide{
     display: none;
 }
 
-#nav-show{
+/* #nav-show{
     display: initial;
     background-color: white;
     box-shadow: 0px 6px 8px 0px rgba(0,0,0,0.2);
     width: 80px;
     height: 125px;
     padding-left: 10px;
-}
+} */
 
 #nav-bars{
     color: black;
