--- a/src/LandingPage/LandingPage.css
+++ b/src/LandingPage/LandingPage.css
@@ -25,5 +25,13 @@
 }
 
 .landing-main-text{
-    padding: 5px;
+    padding: 2px 5px;
+    font-weight: 300;
+    font-size: 17px;
+}
+
+.landing-demo-text{
+    padding: 2px 2px 2px 5px;
+    font-size: 12px;
+    font-weight: 400;
 }
