--- a/src/SearchPage/SearchPage.css
+++ b/src/SearchPage/SearchPage.css
@@ -6,29 +6,41 @@
 }
   
 #search-title{
-   margin-bottom: 20px;  
+    margin-left: 10px; 
+    color: rgba(0, 0, 0, 0.836);
+    border-radius: 4px;
+    font-weight: 300;
+    margin-bottom: 15px;
+}
+
+#search-btn{
+    background-color: white;
+    color: rgba(0, 0, 0, 0.836);
+    border: grey 1px solid;
+    border-radius: 4px;
+    padding: 2px;
+    font-weight: 400;
+    font-size: 12px;
+    width: 100%;
 }
 
 #search{
-    margin-bottom: 10px;  
+    margin-bottom: 10px; 
+    padding: 4px; 
+    border-radius: 4px;
+    border: grey 1px solid;
 }
 
 .searchTypes{
-    padding: 1px;
-    margin: 6px;
+    margin-bottom: 30px;
+    border-radius: 4px;
+    border: grey 1px solid;
+    width: 100%;
 }
-
-/* .search-check-items{
-    display: flex;
-}
-
-.search-check-items p{
-    padding-left: 7px;
-} */
 
 #results-cont{
     box-shadow: 0px 1px 2px 2px rgba(0,0,0,0.1); 
-    margin-top: 50px;
+    margin-top: 30px;
     display: flex;
     flex-wrap: wrap;
     padding-left: 30px;
@@ -36,4 +48,5 @@
 
 #results-title{
     padding-top: 20px;
+    font-weight: 500;
 }
