--- a/src/SignIn/LogIn/LogIn.css
+++ b/src/SignIn/LogIn/LogIn.css
@@ -12,19 +12,36 @@
   
 input {
     height: 20px;
-    border-style: black;
+    border: grey 1px solid;
+    border-radius: 4px;
+    padding-left: 5px;
 }
 
 .allItems{
     margin: 5px;
+    font-weight: 300;
 }
 
 #login-btn{
     width: 93%;
+    color: rgba(0, 0, 0, 0.836);
+    border: grey 1px solid;
+    border-radius: 4px;
+    font-weight: 400;
+    font-size: 12px;
+    padding: 3px 0;
+    background-color: white;
 }
 
 #signup-link{
-    color: black;
+    color: rgba(0, 0, 0, 0.836);
+    border: grey 1px solid;
+    border-radius: 4px;
+    font-weight: 400;
+    font-size: 12px;
+    margin-top: 20px;
+    padding: 3px 3px;
+    background-color: white;
 }
 
 .error{
