--- a/src/SignIn/SignUp.css
+++ b/src/SignIn/SignUp.css
@@ -29,13 +29,27 @@ input {
 
 #signup-btn{
     width: 93%;
+    color: rgba(0, 0, 0, 0.836);
+    border: grey 1px solid;
+    border-radius: 4px;
+    font-weight: 400;
+    font-size: 12px;
+    padding: 3px 0;
+    background-color: white;
 }
 
 #login-link{
-    color: black;
-    margin-top: 30px;
+    color: rgba(0, 0, 0, 0.836);
+    border: grey 1px solid;
+    border-radius: 4px;
+    font-weight: 400;
+    font-size: 12px;
+    margin-top: 20px;
+    padding: 3px 3px;
+    background-color: white;
 }
 
 #signup-title{
-    margin-bottom: 25px;
+    margin-bottom: 15px;
+    font-weight: 300;
 }
