--- a/src/Trip/TripList/TripDetails/TripDetails.css
+++ b/src/Trip/TripList/TripDetails/TripDetails.css
@@ -15,7 +15,8 @@ span{
 }
 
 #day-cont{
-    border: solid black 1px;
+    border: grey 1px solid;
+    border-radius: 4px;
     width: 60vw;
     margin-top: 20px;
     padding: 10px;
@@ -33,4 +34,71 @@ input {
 
 #trip-details-activity{
     width: 145px;
+}
+
+.back-to-trip-list{
+    color: rgba(0, 0, 0, 0.836);
+    border: grey 1px solid;
+    border-radius: 4px;
+    font-weight: 400;
+    font-size: 12px;
+    padding: 3px 5px;
+    margin: 5px 0;
+    margin-bottom: 15px;
+    width: 39px;
+}
+
+.add-day{
+    background-color: white;
+    color: rgba(0, 0, 0, 0.836);
+    border: grey 1px solid;
+    border-radius: 4px;
+    font-weight: 500;
+    font-size: 12px;
+    padding: 3px 5px;
+    margin: 5px 0;
+    margin-bottom: 15px;
+    width: 100%;
+}
+
+.add-activity{
+    background-color: white;
+    color: rgba(0, 0, 0, 0.836);
+    border: grey 1px solid;
+    border-radius: 4px;
+    font-weight: 400;
+    font-size: 12px;
+    padding: 3px 5px;
+    margin: 5px 0;
+    margin-top: 15px;
+    width: 81px;
+}
+
+.edit-btn{
+    color: rgba(0, 0, 0, 0.836);
+    border: grey 1px solid;
+    border-radius: 4px;
+    font-weight: 400;
+    font-size: 12px;
+    padding: 1px 4px;
+    margin: 5px 0;
+    width: 32px;
+}
+
+.activity{
+    font-weight: 300;
+}
+
+.trip-name{
+    font-weight: 300;
+    font-size: 16px;
+}
+.trip-details{
+    font-weight: 400;
+    font-size: 12px;
+}
+
+.edit-add-activity-box{
+    padding: 8px;
+    margin-top: 5px;
 }
