--- a/src/Trip/TripList/TripList.css
+++ b/src/Trip/TripList/TripList.css
@@ -12,5 +12,17 @@
 #new-trip{
   margin-top: 20px;
   margin-left: 30px;
-  color: black;
+  color: rgba(0, 0, 0, 0.836);
+  border: grey 1px solid;
+  border-radius: 4px;
+  font-weight: 400;
+  font-size: 12px;
+  margin-bottom: 15px;
+  width: 75px;
+}
+
+.trip-list{
+  color: rgba(0, 0, 0, 0.753);
+  font-weight: 400;
+  padding-left: 0;
 }
