--- a/src/Review/ReviewList/ReviewList.css
+++ b/src/Review/ReviewList/ReviewList.css
@@ -7,7 +7,7 @@
     margin-top: 65px;
     margin-bottom: 15px;
     padding-left: 30px;
-    font-weight: 400;
+    font-weight: 200;
 }
   
 #new-review{
@@ -33,6 +33,10 @@
   color: rgba(0, 0, 0, 0.753);
   font-weight: 400;
   padding-left: 0;
+}
+
+.review-list-link{
+  font-size: 12px;
 }
 
 .review-delete-btn{
