--- a/src/SearchPage/SearchPage.css
+++ b/src/SearchPage/SearchPage.css
@@ -50,3 +50,16 @@
     padding-top: 20px;
     font-weight: 500;
 }
+
+@media only screen and (min-width: 768px){
+    #search-title{
+        font-size: 28px;
+        margin-left: 0;
+    }
+
+    #results-title{
+        padding-top: 20px;
+        font-size: 28px;
+        font-weight: 300;
+    }
+}
