--- a/src/Trip/TripList/TripList.css
+++ b/src/Trip/TripList/TripList.css
@@ -1,12 +1,7 @@
-#trip-cont{
-    padding-top: 10px;
-    padding-left: 30px;
-}
-  
-#title{
-    margin-top: 65px;
-    margin-bottom: 15px;
-    padding-left: 30px;
+.trip-list-title{
+  margin-bottom: 25px;
+  font-weight: 200;
+  font-size: 25px;
 }
   
 #new-trip{
@@ -21,8 +16,20 @@
   width: 75px;
 }
 
-.trip-list{
+.trip-list-name{
   color: rgba(0, 0, 0, 0.753);
   font-weight: 400;
   padding-left: 0;
+}
+
+.trip-details-link{
+  font-size: 12px;
+}
+
+@media only screen and (min-width: 768px){
+  .trip-list-title{
+    margin: 55px 0;
+    font-weight: 200;
+    font-size: 30px;
+  }
 }
