--- a/src/LandingPage/LandingPage.css
+++ b/src/LandingPage/LandingPage.css
@@ -1,4 +1,3 @@
-/* NotFound.js also using main-landing css */
 #main-landing{
     margin-top: 40px;
     padding: 20px;
@@ -6,7 +5,6 @@
     background-size: cover;
     height: 100vh;
 }
-/* media query laptop screen, switch url image to SantoriniGreece */
   
 #landing-start{
     background-color: white; 
@@ -34,4 +32,29 @@
     padding: 2px 2px 2px 5px;
     font-size: 12px;
     font-weight: 400;
+    margin-left: 5px;
+}
+
+@media only screen and (min-width: 768px){
+    #main-landing{
+        margin-top: 40px;
+        padding: 20px;
+        background-image: url('../Images/SantoriniGreece.jpg'); 
+        background-size: cover;
+        height: 100vh;
+    }
+
+    .landing-main-text{
+        padding: 2px 5px;
+        font-weight: 300;
+        font-size: 22px;
+        margin-left: 150px;
+    }
+    
+    .landing-demo-text{
+        padding: 2px 2px 2px 5px;
+        font-size: 16px;
+        font-weight: 300;
+        margin-left: 160px;
+    }
 }
