--- a/src/Trip/NewTrip/NewTrip.css
+++ b/src/Trip/NewTrip/NewTrip.css
@@ -19,13 +19,28 @@ span{
     width: 60vw;
     margin-top: 20px;
 }
-  
-input {
-    height: 20px;
-    border-style: black;
-}
 
 .new-trip-btns{
     margin: 0 0 10px 10px;
     padding: 3px;
+}
+
+.new-trip-input{
+    width: 150px;
+    margin: 5px 0;
+}
+
+#trip-title{
+    margin-bottom: 25px;
+    font-weight: 200;
+    font-size: 25px;
+    width: 300px;
+}
+
+.new-trip-label{
+    font-weight: 300;
+}
+
+#search-btn{
+    margin: 30px 0 20px 0;
 }
