--- a/src/SearchPage/SearchPage.css
+++ b/src/SearchPage/SearchPage.css
@@ -1,19 +1,19 @@
-#main-search{
+#main-search {
     margin-top: 60px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-  
-#search-title{
-    margin-left: 10px; 
+
+#search-title {
+    margin-left: 10px;
     color: rgba(0, 0, 0, 0.836);
     border-radius: 4px;
     font-weight: 300;
     margin-bottom: 15px;
 }
 
-#search-btn{
+#search-btn {
     background-color: white;
     color: rgba(0, 0, 0, 0.836);
     border: grey 1px solid;
@@ -24,40 +24,40 @@
     width: 100%;
 }
 
-#search{
-    margin-bottom: 10px; 
-    padding: 4px; 
+#search {
+    margin-bottom: 10px;
+    padding: 4px;
     border-radius: 4px;
     border: grey 1px solid;
 }
 
-.searchTypes{
+.searchTypes {
     margin-bottom: 30px;
     border-radius: 4px;
     border: grey 1px solid;
     width: 100%;
 }
 
-#results-cont{
-    box-shadow: 0px 1px 2px 2px rgba(0,0,0,0.1); 
+#results-cont {
+    box-shadow: 0px 1px 2px 2px rgba(0, 0, 0, 0.1);
     margin-top: 30px;
     display: flex;
     flex-wrap: wrap;
     padding-left: 30px;
 }
 
-#results-title{
+#results-title {
     padding-top: 20px;
     font-weight: 500;
 }
 
-@media only screen and (min-width: 768px){
-    #search-title{
+@media only screen and (min-width: 768px) {
+    #search-title {
         font-size: 28px;
         margin-left: 0;
     }
 
-    #results-title{
+    #results-title {
         padding-top: 20px;
         font-size: 28px;
         font-weight: 300;
