--- a/src/SignIn/LogIn/LogIn.css
+++ b/src/SignIn/LogIn/LogIn.css
@@ -1,15 +1,15 @@
-#login{
+#login {
     padding-top: 140px;
     display: flex;
     justify-content: center;
 }
-  
-#container{
+
+#container {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
 }
-  
+
 input {
     height: 20px;
     border: grey 1px solid;
@@ -17,28 +17,28 @@ input {
     padding-left: 5px;
 }
 
-.allItems{
+.allItems {
     margin: 5px 0 15px;
     width: 130px;
 }
 
-#login-title{
+#login-title {
     font-weight: 300;
     margin-bottom: 15px;
 }
 
-.login-demo{
+.login-demo {
     margin-top: 5px;
     font-size: 16px;
     font-weight: 300;
 }
 
-.login-demo-title{
+.login-demo-title {
     margin: 25px 0 10px;
     font-weight: 400;
 }
 
-#login-btn{
+#login-btn {
     width: 100%;
     color: rgba(0, 0, 0, 0.836);
     border: grey 1px solid;
@@ -49,7 +49,7 @@ input {
     background-color: white;
 }
 
-#signup-link{
+#signup-link {
     color: rgba(0, 0, 0, 0.836);
     border: grey 1px solid;
     border-radius: 4px;
@@ -58,11 +58,11 @@ input {
     margin-top: 20px;
     padding: 3px 3px;
     background-color: white;
-    width: 53px
+    width: 53px;
 }
 
-.error{
-    color: red; 
+.error {
+    color: red;
     font-size: 14px;
     width: 210px;
     margin-bottom: 5px;
