--- a/src/nav/Nav.css
+++ b/src/nav/Nav.css
@@ -1,39 +1,39 @@
-nav{
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: white; 
+    background-color: white;
     position: fixed;
     top: 0;
     width: 100%;
     height: 40px;
     padding: 0 10px 0 10px;
-    box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.1);
+    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
 }
 
-.nav-link, a{
+.nav-link,
+a {
     padding: 2px 10px;
     color: black;
     text-decoration: none;
     display: block;
     background-color: white;
-    
 }
 
 .nav-auth {
     padding: 0;
-    box-shadow: 2px 10px 18px 0px rgba(0,0,0,0.1);
+    box-shadow: 2px 10px 18px 0px rgba(0, 0, 0, 0.1);
 }
 
-#nav-hide{
+#nav-hide {
     display: none;
 }
 
-#nav-bars{
+#nav-bars {
     color: black;
 }
 
-#nav-show{
+#nav-show {
     position: fixed;
     top: 40px;
     right: 0px;
