refactoring back buttons css

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -3,3 +3,25 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.button {
+    background-color: white;
+    color: rgba(0, 0, 0, 0.836);
+    border: grey 1px solid;
+    border-radius: 4px;
+    padding: 2px;
+    font-weight: 400;
+    font-size: 12px;
+}
+
+.back-button{
+    color: rgba(0, 0, 0, 0.836);
+    border: grey 1px solid;
+    border-radius: 4px;
+    font-weight: 600;
+    font-size: 12px;
+    padding: 3px 5px;
+    margin: 5px 0;
+    margin-bottom: 15px;
+    width: 41px;
+}
