added .button class

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -14,14 +14,9 @@
     font-size: 12px;
 }
 
-.back-button{
-    color: rgba(0, 0, 0, 0.836);
-    border: grey 1px solid;
-    border-radius: 4px;
+.back-btn {
     font-weight: 600;
-    font-size: 12px;
     padding: 3px 5px;
-    margin: 5px 0;
-    margin-bottom: 15px;
+    margin: 5px 0 15px;
     width: 41px;
 }
