--- a/src/SignIn/SignUp.css
+++ b/src/SignIn/SignUp.css
@@ -23,26 +23,14 @@
     width: 150px;
 }
 
-#signup-btn {
-    width: 93%;
-    color: rgba(0, 0, 0, 0.836);
-    border: grey 1px solid;
-    border-radius: 4px;
-    font-weight: 400;
-    font-size: 12px;
+#signup-submit {
+    width: 100%;
     padding: 3px 0;
-    background-color: white;
 }
 
 #login-link {
-    color: rgba(0, 0, 0, 0.836);
-    border: grey 1px solid;
-    border-radius: 4px;
-    font-weight: 400;
-    font-size: 12px;
     margin-top: 20px;
     padding: 3px 3px;
-    background-color: white;
 }
 
 #signup-title {
