--- a/src/Review/NewReview.css
+++ b/src/Review/NewReview.css
@@ -41,11 +41,19 @@ input {
     margin: 5px 0 5px 8px;
 }
 
-#review-title {
+.review-title {
     margin: 20px 0 30px 0;
     font-weight: 200;
 }
 
+.edit-review-title {
+    font-size: 21px;
+}
+
 #add-review-btn {
     width: 100%;
+}
+
+#comments {
+    padding-left: 5px;
 }
