--- a/src/SearchPage/Results/ResultsPage.css
+++ b/src/SearchPage/Results/ResultsPage.css
@@ -33,3 +33,14 @@
     font-weight: 300;
     font-size: 16px;
 }
+
+@media only screen and (min-width: 900px) {
+    .results-image {
+        width: 200px;
+        height: 150px;
+    }
+
+    .results-content {
+        margin-top: 15px;
+    }
+}
