--- a/src/SearchPage/SearchPage.css
+++ b/src/SearchPage/SearchPage.css
@@ -32,11 +32,12 @@
 }
 
 #results-cont {
-    box-shadow: 0px 1px 2px 2px rgba(0, 0, 0, 0.1);
     margin-top: 30px;
     display: flex;
     flex-wrap: wrap;
-    padding-left: 30px;
+    padding: 10px;
+    max-width: 550px;
+    margin: 0 auto;
 }
 
 #results-title {
@@ -54,5 +55,10 @@
         padding-top: 20px;
         font-size: 28px;
         font-weight: 300;
+    }
+
+    #results-cont {
+        box-shadow: none;
+        padding: 30px;
     }
 }
