--- a/src/SearchPage/Results/ResultsPage.css
+++ b/src/SearchPage/Results/ResultsPage.css
@@ -34,6 +34,12 @@
     font-size: 16px;
 }
 
+@media only screen and (min-width: 750px) {
+    .results-content {
+        width: 350px;
+    }
+}
+
 @media only screen and (min-width: 900px) {
     .results-image {
         width: 200px;
