--- a/src/App/App.css
+++ b/src/App/App.css
@@ -5,11 +5,12 @@
 }
 
 .button {
-    background-color: white;
-    color: rgba(0, 0, 0, 0.836);
-    border: grey 1px solid;
+    color: white;
+    background-color: #0d89c3;
+    border-color: #0d89c3;
+    border: 1px solid;
     border-radius: 4px;
-    padding: 2px;
+    padding: 2px 6px;
     font-weight: 400;
     font-size: 12px;
 }
@@ -23,6 +24,9 @@
 
 .edit-btn {
     padding: 1px 4px;
-    margin: 5px 0;
+    margin: 5px;
     width: 32px;
+    color: white;
+    background-color: #0d89c3;
+    border-color: #0d89c3;
 }
