--- a/src/SignIn/SignUp.css
+++ b/src/SignIn/SignUp.css
@@ -31,6 +31,13 @@
 #login-link {
     margin-top: 20px;
     padding: 3px 3px;
+    color: black;
+    background-color: white;
+}
+
+#login-link:hover {
+    text-decoration: underline #0d89c3;
+    color: #0d89c3;
 }
 
 #signup-title {
